css/custom.css
/* ... */
/* // Medium screens */
@media only screen and (min-width: 40.063em) { 

	.top-bar-section li:not(.has-form) a:not(.button) {
		padding: 0 10px;
		line-height: 58px;
		background: #262b37;
	}
	
	.top-bar-section li:not(.has-form) a:not(.button):hover {
		background: transparent;
	}
	
} /* min-width 641px, medium screens */

@media only screen and (min-width: 40.063em) and (max-width: 64em) { 	
	
	.image-adjuster {
		padding: 5% 0;
	}
	
	.transparent-div {
		width: 100%;
		height: 100%;
		background-size: 100% 100%;
	}
	
	.firstDivUnder {
		height: 100%;
		overflow: hidden;	
		vertical-align: middle;
		text-align: center;
		background: #6f6f6f;
	}
	
	.bannerText {
		top: 2%;
		padding: 15px 0 15px;
	}
	
	.panel {
		width: 30%;
		margin: 0 auto;
	}

} /* min-width 641px and max-width 1024px, use when QAing tablet-only issues */

@media only screen and (max-width:1024px) {
	
	.tablet-hidden{
		visibility: hidden;
		display: none;
	}
	
	.padding-mobile {
		padding: 15px !important;
	}
	
	.customHeadTitlesSpacing {
		padding-top: 4px;	
		padding-bottom: 4px;
	}
	
	.smallSpace {
		padding-left: 4px;
	}
}

@media only screen and (max-width:640px) {
	
	.top-bar {
		margin-bottom: 0;
		visibility: hidden;
		display: none;
	}
	
	.f-topbar-fixed {
		padding-top: 0 !important;
	}
	
	.desktop-hidden {
		visibility: visible;
		display: block;
	}
}

@media only screen and (min-width:641px) {
	
	.desktop-hidden {
		visibility: hidden;
		display: none;
	}
}

/* // Large screens */
@media only screen and (min-width: 64.063em) { } /* min-width 1025px, large screens */

@media only screen and (min-width: 64.063em) and (max-width: 90em) { } /* min-width 1024px and max-width 1440px, use when QAing large screen-only issues */

/* // XLarge screens */
@media only screen and (min-width: 90.063em) { } /* min-width 1441px, xlarge screens */

@media only screen and (min-width: 90.063em) and (max-width: 120em) { } /* min-width 1441px and max-width 1920px, use when QAing xlarge screen-only issues */

/* // XXLarge screens */
@media only screen and (min-width: 120.063em) { } /* min-width 1921px, xlarge screens */

/*###################################
##  12 Skills diagram                ##
##################################### */

.chart {
  position: relative;
  display: inline-block;
  width: 152px;
  height: 152px;
  margin-bottom: 26px;
  text-align: center;
}
.chart canvas {
  position: absolute;
  top: 0;
  left: 0;
  width: 152px;
  height: 152px;
}

.skillBg {
	background: url('../img/skills.png') no-repeat 0 0;
}

.percent {
	display: inline-block;
	font-size: 21px;
	color: #474d5d;
	line-height: 152px;
	z-index: 2;
}
.percent:after {
  content: '%';
  margin-left: 0.1em;
  font-size: .8em;
}
.angular {
  margin-top: 100px;
}
.angular .chart {
  margin-top: 0;
}
input {
  display: block;
  margin: auto;
  margin-bottom: 3em;
}
  
/*###################################
##  13. Fixes and customizations    ##
#####################################*/  
 
nav.top-bar {
	text-align:center;
}

section.top-bar-section {
	display: inline-block;
}

.top-bar-section ul li {
	margin: 0 8px;
}

	.top-bar-section ul li>a {
		font-size: 16px;
		font-family: 'Droid Sans', "Helvetica Neue", Helvetica, Arial, sans-serif;
		font-style: normal;
		font-weight: lighter;
	}

.inline-list {
	text-align: center;
}
	
	.inline-list>li {
		float: none;
		display: inline-block;
	}

.vco-slider .slider-item .content .content-container .media .media-wrapper .media-container .media-frame, .vco-slider .slider-item .content .content-container .media .media-wrapper .media-container .media-image img {
	border: 0 !important;
}
	
.vco-storyjs img {
	border: none !important;
}
 
img {
	border: none !important;
}

.orbit-container .orbit-slide-number {
	color: #6f6f6f;
	font-family: 'Droid Sans', "Helvetica Neue", Helvetica, Arial, sans-serif;
	background: rgba(0,0,0,0);
}

	.orbit-container .orbit-slides-container>* .orbit-caption {
		background-color: rgba(51,51,51,0.5);
		font-family: 'Droid Sans', "Helvetica Neue", Helvetica, Arial, sans-serif;
	}

/*###################################
##  14. $Contact Form              ##
##################################### */

.button {
	font-family: 'Droid Sans', "Helvetica Neue", Helvetica, Arial, sans-serif;
	background-color: rgb(1,193,255);
	border-color: rgb(1,193,255);
	font-size: 1.5rem;
}

	.button:hover, .button:focus {
		background: #61B329;
	}

textarea {
	min-height: 169px;
}

fieldset {
	border: none;
}

span.success, small.success {
	display: block;
	padding: 0.375rem 0.5625rem 0.5625rem;
	margin-top: -1px;
	margin-bottom: 1rem;
	font-size: 1.25rem;
	font-weight: normal;
	font-style: italic;
	background: #61B329;
	color: #fff;
	font-family: 'Droid Sans', "Helvetica Neue", Helvetica, Arial, sans-serif;
}

span.error, small.error {
	font-size: 1.25rem;
	font-family: 'Droid Sans', "Helvetica Neue", Helvetica, Arial, sans-serif;
}

